--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
 
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+
+    //google fonts https://fonts.google.com/specimen/Poppins?preview.text=bold&preview.text_type=custom#standard-styles
 }
