--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,17 @@
     package="com.example.photoimagefilter">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PhotoImageFilter">
-        <activity android:name=".activities.EditImageActivity"></activity>
+        android:theme="@style/Theme.PhotoImageFilter"
+        android:name=".utilities.AppConfig"
+
+        >
+        <activity android:name=".activities.EditImageActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/FullScreen">
