--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,14 @@
     package="com.example.photoimagefilter">
 
     <application
-
         android:name=".utilities.AppConfig"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PhotoImageFilter"
-
-        >
+        android:theme="@style/Theme.PhotoImageFilter">
+        <activity android:name=".activities.FilteredImageActivity"></activity>
         <activity android:name=".activities.EditImageActivity" />
         <activity
             android:name=".activities.MainActivity"
